test/source/errors/init-dupe-var.hc
// This file attempts to declare two predefined floor slots using the
// same variable name. This should cause an error during compilation.

init foo @ 0
init foo @ 1

output foo
